# platformer-cpp

./: CMakeLists.txt
levels/: first.lvl
src/: engine.cpp  engine.hpp  error.cpp  error.hpp  keyboard_state.cpp  keyboard_state.hpp  level.cpp  level.hpp  level_file_block_statement.cpp  level_file_block_statement.hpp  level_file_name_statement.cpp  level_file_name_statement.hpp  level_file_node.cpp  level_file_node.hpp  level_file_parser.cpp  level_file_parser.hpp  level_file_size_statement.cpp  level_file_size_statement.hpp  level_file_structure.cpp  level_file_structure.hpp  level_file_token.cpp  level_file_token.hpp  level_object.cpp  level_object.hpp  level_reader.cpp  level_reader.hpp  main.cpp  main.hpp  platform.cpp  platform.hpp  player.cpp  player.hpp  texture_registry.cpp  texture_registry.hpp  timer.cpp  timer.hpp
